<resources>
    <string name="app_name">SujungMate</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">학번(아이디) 입력</string>
    <string name="prompt_password">비밀번호 입력</string>
    <string name="prompt_passwordconfirm">비밀번호 재입력</string>
    <string name="prompt_confirmnum">인증번호 입력</string>
    <string name="prompt_name">닉네임 입력</string>
    <string name="prompt_lecture">수강과목 입력</string>
    <string name="prompt_message">상태메세지 입력</string>
    <string name="prompt_signup_email_confirm">회원가입을 위한 성신 이메일 인증을 진행합니다.\n이메일 확인 후, 다음 버튼을 눌러주세요.</string>
    <string name="action_sign_in">로그인</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_sign_up">회원가입</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_sign_up1">ScrollingActivity</string>
    <string name="DescriptionImageWarning">이미지가 열리지 않습니다.</string>
    <string name="action_settings">Settings</string>
    <string name="action_service_argee">서비스 이용약관 및 개인정보 처리방침</string>
    <string name="action_service_argee_0">0. 서비스 이용약관</string>
    <string name="action_service_argee_1">1. 개인정보의 수집 이용 목적, 수집하는 개인정보의 항목 및 수집 방법</string>
    <string name="action_service_argee_2">2. 제3자 제공시 제공받는 자의 성명, 제공받는 자의 이용 목적과 제공하는 항목</string>
    <string name="action_service_argee_3">3. 개인정보의 보유 및 이용 기간, 개인정보의 파기절차 및 파기방법</string>
    <string name="action_service_argee_4">4. 개인정보 처리위탁을 하는 업무의 내용 및 수탁자</string>
    <string name="action_service_argee_5">5. 이용자 및 법정대리인의 관리와 그 행사 방법</string>
    <string name="action_service_argee_6">6. 개인정보 자동수집 장치의 설치운영 및 거부에 관한 사항</string>
    <string name="action_service_argee_7">7. 개인정보 보호책임자 또는 담당자의 이름 및 연락처</string>
    <string name="action_next">다음</string>
    <string name="action_info_save">시작하기</string>
    <string name="text_emailconfirm">인증메일 발송</string>
    <string name="text_sungshinemail">\@sungshin.ac.kr</string>
    <string name="text_email">학교 이메일 인증</string>
    <string name="text_emailDetail">이메일로 발송된 인증번호를 입력해주세요.</string>
    <string name="text_signupwarning">※ 잘못된 정보 입력으로 발생하는 모든 일은\n사용자에게 책임이 있음을 알립니다.</string>
    <string name="text_star">*</string>
    <string name="text_signup">회원가입</string>
    <string name="title_activity_test">testActivity</string>
    <string name="text_signupmessage">수정이 여러분 반갑습니다!\n가입을 통해 짝수정을 만나보세요.</string>
    <string name="text_chatmanage">채팅 목록</string>

    <string name="title_MateType">매칭 유형 선택</string>
    <string name="type1_randomMatch">랜덤 매칭</string>
    <string name="type2_detailsMatch">세부 설정 후 매칭</string>
    <string name="explain_random">무작위로 상대방과 매칭됩니다.</string>
    <string name="explain_details">원하는 조건을 입력하면\n그에 맞는 상대방과 매칭됩니다.</string>
    <string name="title_MateInfo">매칭 세부 설정</string>
    <string name="select_relationships">짝수정 관계</string>
    <string name="r1_junior">후배</string>
    <string name="r2_classmate">동기</string>
    <string name="r3_senior">선배</string>
    <string name="text_interestingMajor">관심 학과</string>
    <string name="text_lectures">수강 과목</string>
    <string name="hint_lectures">수강 과목을 입력하세요</string>
    <string name="text_MBTI">MBTI</string>
    <string name="text_interest">관심사</string>
    <string name="text_goMatch">매칭하기</string>
    <string name="title_mateSearch">매칭 결과</string>
    <string name="text_goMateManage">매칭관리로 이동</string>
    <string name="text_error_noMatch">검색 결과가 없습니다.</string>
    <string name="MAJORandSTUNUM">%1$s\n%2$s</string>

    <string name="prompt_oldPW">기존 비밀번호 입력</string>
    <string name="prompt_newPW">새 비밀번호 입력</string>
    <string name="prompt_PWConfirm">새 비밀번호 재입력</string>
</resources>