<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout_mateInfo"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_blue"
    android:focusable="true"
    android:focusableInTouchMode="true"
    tools:context=".MateInfoActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_mateInfo"
        android:layout_width="411dp"
        android:layout_height="wrap_content"
        android:background="#F6F6F6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/mateInfoTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/title_MateInfo"
            android:textColor="@color/black"
            android:textSize="20sp"
            tools:layout_editor_absoluteX="145dp"
            tools:layout_editor_absoluteY="14dp" />

    </androidx.appcompat.widget.Toolbar>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="30dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="30dp" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guideline6"
        app:layout_constraintStart_toStartOf="@+id/guideline4"
        app:layout_constraintTop_toBottomOf="@+id/toolbar_mateInfo">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/select_relationships"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:layout_marginStart="10dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="left"
            android:orientation="horizontal"
            android:paddingLeft="10dp">

            <ToggleButton
                android:id="@+id/junior_mateInfo"
                android:layout_width="60dp"
                android:layout_height="35dp"
                android:background="@drawable/relationship_toggle"
                android:text="후배"
                android:textOff="@string/r1_junior"
                android:textOn="@string/r1_junior" />

            <ToggleButton
                android:id="@+id/classmate_mateInfo"
                android:layout_width="60dp"
                android:layout_height="35dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/relationship_toggle"
                android:text="동기"
                android:textOff="@string/r2_classmate"
                android:textOn="@string/r2_classmate" />

            <ToggleButton
                android:id="@+id/senior_mateInfo"
                android:layout_width="60dp"
                android:layout_height="35dp"
                android:background="@drawable/relationship_toggle"
                android:text="선배"
                android:textOff="@string/r3_senior"
                android:textOn="@string/r3_senior" />
        </LinearLayout>

        <View
            android:id="@+id/view"
            android:layout_width="352dp"
            android:layout_height="0.2dp"
            android:layout_marginTop="10dp"
            android:background="#ADADAD" />

        <TextView
            android:id="@+id/nickname_myPage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/text_interestingMajor"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <Spinner
            android:id="@+id/major_mateInfo"
            android:layout_width="300dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:background="@drawable/spinner_bg"
            android:entries="@array/interesting_major"
            android:padding="5dp"
            android:spinnerMode="dropdown" />

        <View
            android:id="@+id/view2"
            android:layout_width="352dp"
            android:layout_height="0.2dp"
            android:layout_marginTop="10dp"
            android:background="#ADADAD" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/text_lectures"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/lecture_mateInfo"
            android:layout_width="300dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:background="@drawable/edittext_lecture_input"
            android:ems="10"
            android:hint="@string/hint_lectures"
            android:inputType="text"
            android:paddingLeft="10dp" />

        <View
            android:id="@+id/line_infoModify"
            android:layout_width="352dp"
            android:layout_height="0.2dp"
            android:layout_marginTop="10dp"
            android:background="#ADADAD" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/statusMessage_myPage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="20dp"
                android:text="@string/text_MBTI"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <Spinner
                android:id="@+id/MBTI_mateInfo"
                android:layout_width="250dp"
                android:layout_height="40dp"
                android:background="@drawable/spinner_bg"
                android:entries="@array/MBTI_type"
                android:padding="5dp"
                android:spinnerMode="dropdown" />
        </LinearLayout>

        <View
            android:id="@+id/view4"
            android:layout_width="352dp"
            android:layout_height="0.2dp"
            android:layout_marginTop="10dp"
            android:background="#ADADAD" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/major_myPage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="13dp"
                android:text="@string/text_interest"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:orientation="vertical"
                android:paddingTop="10dp"
                android:paddingBottom="10dp">

                <Spinner
                    android:id="@+id/interest1_mateInfo"
                    android:layout_width="250dp"
                    android:layout_height="40dp"
                    android:background="@drawable/spinner_bg"
                    android:entries="@array/large_category"
                    android:padding="5dp"
                    android:spinnerMode="dropdown" />

                <Spinner
                    android:id="@+id/interest2_mateInfo"
                    android:layout_width="250dp"
                    android:layout_height="40dp"
                    android:layout_marginTop="5dp"
                    android:background="@drawable/spinner_bg"
                    android:padding="5dp"
                    android:spinnerMode="dropdown" />

            </LinearLayout>

        </LinearLayout>

        <Button
            android:id="@+id/goMateSearch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"
            android:background="@drawable/button_radius_3_blue"
            android:gravity="center"
            android:text="@string/text_goMatch"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>