<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#D9C7EB"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".LoginActivity">

    <ImageView
        android:id="@+id/title_image_login"
        android:layout_width="114dp"
        android:layout_height="127dp"
        app:layout_constraintBottom_toTopOf="@+id/schoolemail_edittext_login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.68"
        app:srcCompat="@drawable/sujunggu" />

    <EditText
        android:id="@+id/password_edittext_login"
        android:layout_width="260dp"
        android:layout_height="35dp"
        android:background="#ffffff"
        android:hint="@string/prompt_password"
        android:imeActionLabel="@string/action_sign_in_short"
        android:imeOptions="actionDone"
        android:inputType="textPassword"
        android:paddingLeft="8dp"
        android:selectAllOnFocus="true"
        app:layout_constraintBottom_toTopOf="@+id/login_button_login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/schoolemail_edittext_login"
        app:layout_constraintVertical_bias="0.126"
        tools:ignore="TouchTargetSizeCheck" />

    <Button
        android:id="@+id/signup_button_login"
        android:layout_width="60dp"
        android:layout_height="39dp"

        android:background="#00ff0000"
        android:text="회원가입"
        android:textColor="#582F81"
        android:textSize="13dp"
        app:layout_constraintBottom_toTopOf="@+id/login_button_login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.861"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password_edittext_login"
        app:layout_constraintVertical_bias="0.08"
        tools:ignore="TouchTargetSizeCheck" />

    <Button
        android:id="@+id/login_button_login"
        android:layout_width="90dp"
        android:layout_height="61dp"
        android:layout_gravity="start"
        android:layout_marginBottom="136dp"
        android:backgroundTint="#A27EBE"
        android:enabled="true"
        android:text="@string/action_sign_in"
        android:textColor="@color/white"
        android:textSize="18dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/schoolemail_edittext_login"
        android:layout_width="260dp"
        android:layout_height="35dp"
        android:layout_marginBottom="108dp"
        android:background="#ffffff"
        android:hint="@string/prompt_email"
        android:inputType="textEmailAddress"
        android:maxLength="8"
        android:paddingLeft="8dp"
        android:selectAllOnFocus="true"
        app:layout_constraintBottom_toTopOf="@+id/login_button_login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"

        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="TouchTargetSizeCheck" />

    <TextView
        android:id="@+id/domain_textview_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/text_sungshinemail"
        android:textColor="@color/black"
        android:textSize="13sp"
        app:layout_constraintBottom_toBottomOf="@+id/schoolemail_edittext_login"
        app:layout_constraintEnd_toEndOf="@+id/schoolemail_edittext_login"
        app:layout_constraintHorizontal_bias="0.939"
        app:layout_constraintStart_toStartOf="@+id/schoolemail_edittext_login"
        app:layout_constraintTop_toTopOf="@+id/schoolemail_edittext_login"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/resetpassword_button_login"
        android:layout_width="wrap_content"
        android:layout_height="39dp"
        android:layout_marginRight="3dp"
        android:layout_marginBottom="24dp"
        android:background="#00ff0000"
        android:text="비밀번호 재설정"
        android:textColor="#582F81"
        android:textSize="12dp"
        app:layout_constraintBottom_toTopOf="@+id/login_button_login"
        app:layout_constraintEnd_toStartOf="@+id/signup_button_login"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="TouchTargetSizeCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>